<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/confirm_page_bg"
    >

    <RelativeLayout
        android:id="@+id/app_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/street_perpule">

        <ImageView
            android:id="@+id/phone_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_arrow"
            android:visibility="gone" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Mobile Auth"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/phone_num_ver_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_header"
        android:background="@color/glimpse_gray"
       >

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        app:ccp_hintExampleNumber="true"
                    app:ccp_defaultLanguage="ENGLISH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                    app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
                        android:background="@drawable/tutorial_shape"
                        app:ccp_textSize="14sp"
                  app:ccp_countryPreference="in" />
                    <EditText
                        android:id="@+id/field_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/hint_phone_number"

                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="15dp"
                        android:inputType="phone" />
                </LinearLayout>


                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:weightSum="3.0">

                <TextView
                    android:id="@+id/button_start_verification"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/theme_button"
                    android:gravity="center"
                    android:text="@string/start_phone_auth"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/button_verify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/theme_button"
                    android:gravity="center"
                    android:text="@string/verify_phone_auth"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/button_resend"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/theme_button"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/resend_phone_auth"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
