<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/confirm_page_bg"
    tools:context=".Activities.ConfirmInfoActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">

        <ImageView
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_marginLeft="10dp"
            android:id="@+id/back"
            android:padding="13dp"
            android:src="@drawable/back_arrow" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:layout_marginTop="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Confirm your information"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/social_button_height"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5">

                    <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/book_field_height"
                        android:layout_marginLeft="10dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/first_name"

                        android:inputType="text"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5">

                    <EditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/book_field_height"
                        android:layout_marginRight="10dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/social_button_height"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/book_field_height"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/social_button_height"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/book_field_height"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/phone_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/light_blue"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp"
                android:text="Continue"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>